[gd_scene load_steps=3 format=3]

[ext_resource path="res://scripts/debug/debug_overlay.gd" type="Script" id=1]

[node name="DebugOverlay" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.35
anchor_bottom = 0.4

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
text = "Debug Overlay"

[node name="HintLabel" type="Label" parent="VBoxContainer"]
text = "Toggle debug overlay: F1"
